<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorPrimaryDark"
    tools:context=".fragment.UsernameUpdateFragment"
    android:id="@+id/update_password_layout">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
      >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/old_psw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/old_psw"
            style="@style/edit_text"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_psw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_psw"
            android:inputType="textPassword"
            style="@style/edit_text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_psw1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/repeat_psw"
            android:inputType="textPassword"
            style="@style/edit_text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_update_psw"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_label"
        android:textColor="#000"
        style="@style/AppPhotoText"
        android:textAllCaps="false"
        android:background="@drawable/btn_drawable"/>

</LinearLayout>