<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignInFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/view_bg"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout_vertical"
        android:paddingLeft="@dimen/padding_layout_horizontal"
        android:paddingRight="@dimen/padding_layout_horizontal"
        android:paddingTop="@dimen/padding_layout_vertical"
        android:paddingBottom="@dimen/padding_layout_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/paddingBottom_edittext"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edit_text"
                android:hint="@string/login_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edit_text"
                android:inputType="textPassword"
                android:hint="@string/login_psw" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:paddingLeft="@dimen/padding_layout_horizontal"
        android:paddingRight="@dimen/padding_layout_horizontal"
        >
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:text="@string/login_signIn_btn"
            android:background="@drawable/btn_drawable"
            />

    </LinearLayout>
    </LinearLayout>



</FrameLayout>