<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/view_bg_270"
    android:id="@+id/chat_fragment"
    tools:context=".activity.ChatActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:textAlignment="center"
            android:padding="@dimen/_10sdp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <ImageView
                android:id="@+id/backspace_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_keyboard_backspace_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/friend_toolbar_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/username_label"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/backspace_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/frameLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/friend_profile"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="end|center_vertical"
                    android:background="@drawable/circle_image_view_background"
                    />
                <TextView
                    android:id="@+id/photo_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:visibility="visible"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:textColor="@color/grey_color"
                    android:text="@string/photo_label"/>
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_chat_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_bottom_rec"
            />

        <LinearLayout
            android:id="@+id/above_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/link_text_padding"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/paddingBottom_edittext"
                android:layout_marginStart="10dp">

                <EditText
                    android:id="@+id/new_msg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_bg"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorBlack"
                    android:padding="@dimen/btn_corner"
                    android:hint="@string/hint_msg"
                    android:autofillHints="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:layout_marginStart="@dimen/paddingBottom_edittext"
                android:layout_marginEnd="10dp">

                <Button
                    android:id="@+id/send_msg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/send_msg_btn"
                    android:textColor="@color/colorBlack"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_drawable"
                    />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>